// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) No active user 1`] = `
<span
  className="favorite-btn"
  onClick={[Function]}
>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "marginLeft": "5px",
      }
    }
    title="Add to favorites"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        fill="currentColor"
      />
    </svg>
  </button>
</span>
`;

exports[`(2) Not Favorited 1`] = `
<span
  className="favorite-btn"
>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    title="Add to favorites"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
        fill="currentColor"
      />
    </svg>
  </button>
</span>
`;

exports[`(3) Favorited 1`] = `
<span
  className="favorite-btn"
>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    title="Remove from favorites"
    type="button"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        fill="currentColor"
      />
    </svg>
  </button>
</span>
`;
